# VIP-Tasks

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
src/assets/: main.py
